@@ -111,7 +111,7 @@ sub _close {
   my ($self, $id) = @_;
 
   # Finish gracefully
-  if (my $tx = $self->{connections}{$id}{tx}) { $tx->server_close }
+  if (my $tx = $self->{connections}{$id}{tx}) { $tx->closed }
 
   delete $self->{connections}{$id};
 }
@@ -125,7 +125,7 @@ sub _finish {
   return $self->_remove($id) if $tx->is_websocket;
 
   # Finish transaction
-  delete($c->{tx})->server_close;
+  delete($c->{tx})->closed;
 
   # Upgrade connection to WebSocket
   if (my $ws = delete $c->{next}) {
@@ -138,7 +138,7 @@ sub _finish {
     }
 
     # Failed upgrade
-    else { $ws->server_close }
+    else { $ws->closed }
   }
 
   # Close connection if necessary
