@@ -3,23 +3,6 @@ use Mojo::Base 'Mojo::Transaction';
 
 has 'previous';
 
-sub client_close {
-  my ($self, $close) = @_;
-
-  # Premature connection close
-  my $res = $self->res->finish;
-  if ($close && !$res->code && !$res->error) {
-    $res->error({message => 'Premature connection close'});
-  }
-
-  # 4xx/5xx
-  elsif ($res->is_status_class(400) || $res->is_status_class(500)) {
-    $res->error({message => $res->message, code => $res->code});
-  }
-
-  $self->server_close;
-}
-
 sub client_read {
   my ($self, $chunk) = @_;
 
@@ -267,14 +250,6 @@ L<Mojo::Transaction::HTTP> object.
 
 L<Mojo::Transaction::HTTP> inherits all methods from L<Mojo::Transaction> and
 implements the following new ones.
-
-=head2 client_close
-
-  $tx->client_close;
-  $tx->client_close(1);
-
-Transaction closed client-side, no actual connection close is assumed by
-default, used to implement user agents such as L<Mojo::UserAgent>.
 
 =head2 client_read
 
